jna external library, libsodium-jna library